exercise4/blue-green-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-green-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: blue.green
    http:
      paths:
      - path: /
        backend:
          serviceName: blue
          servicePort: 80
